- fix notice indefined var if it's pview, there is no menuGauche - wrap printButton in if in twig

--- a/src/Main/Resources/Templates/Default/public/css/themes/default/css/style.css
+++ b/src/Main/Resources/Templates/Default/public/css/themes/default/css/style.css
@@ -171,3 +171,6 @@ a.buttonsReservation{cursor:pointer}
 	FLOAT:LEFT;
 	}
 }
+.biggerIcon {
+	font-size: 1.3em;
+}
